Refactor SNMP and SSH worker services to use fixed thread pools for improved resource management